--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Haneef Olajobi – Cloud Engineer | Portfolio</title>
-<meta name="description" content="Haneef Olajobi is an aspiring Cloud Engineer with skills in AWS, DevOps, QA Testing, Linux, and Web Development. Explore projects, articles, and cloud journey.">
-<meta name="keywords" content="Haneef, Olajobi, Haneef Olajobi, Cloud Engineer, Aspiring Cloud Engineer, AWS, DevOps, Nigeria Cloud Engineer, Cloud Portfolio, Cloud Projects">
+<meta name="description" content="Haneef Olajobi is a Cloud Engineer with skills in AWS, DevOps, QA Testing, Linux, and Web Development. Explore projects, articles, and cloud journey.">
+<meta name="keywords" content="Haneef, Olajobi, Haneef Olajobi, Cloud Engineer, Cloud Engineer, AWS, DevOps, Nigeria Cloud Engineer, Cloud Portfolio, Cloud Projects">
 <meta name="author" content="Haneef Olajobi">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -400,8 +400,8 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
     <div class="brand">
       <div class="logo">H</div>
       <div>
-        <div style="font-family:'Playfair Display';font-size:18px">Haneef</div>
-        <div style="font-size:12px;color:var(--muted)">Aspiring Cloud Engineer</div>
+        <div style="font-family:'Playfair Display';font-size:18px">Haneef Olajobi</div>
+        <div style="font-size:12px;color:var(--muted)">Cloud Engineer</div>
       </div>
     </div>
 
@@ -421,9 +421,9 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
 <!-- Hero -->
 <section class="hero">
   <div class="intro">
-    <h1>Hi, I'm <span style="font-size:44px">Haneef</span></h1>
+    <h1>Hi, I'm <span style="font-size:44px">Haneef Olajobi</span></h1>
     <p class="type"><span id="typed">Aspiring Cloud Engineer</span></p>
-    <p>I am an aspiring cloud engineer with experience in QA testing, software development and graphic design.</p>
+    <p>I am a cloud engineer with experience in QA testing and software development.</p>
     <div class="hero-buttons">
       <a href="#work" style="background:var(--accent);color:#fff;">
         See my work
@@ -449,7 +449,13 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
 <!-- About -->
 <section id="about" class="card">
   <h3>About me</h3>
-  <p style="color:var(--muted)">I am a university student studying computer science with a passion for cloud computing, automation and DevOps practices. I love building cloud projects, games and small tools that make life easier.</p>
+  <p style="color:var(--muted)">I’m Olajobi Haneef, a Cloud Engineer from Nigeria with a passion for building scalable, automated, and cost-efficient cloud solutions. My expertise spans AWS, Python, Terraform, and AI, combined with strong skills in problem-solving, creative design, leadership, and communication.
+
+I have 3 years of experience as a freelance frontend developer, and during my 2025 internship, I served as a Technical Lead, guiding projects and mentoring teammates. These experiences gave me a solid foundation in both development and leadership, which I now bring to the cloud space.
+
+Currently, I’m working on Multi-Environment-Enterprise-Infrastructure, a project that focuses on designing and deploying fully automated infrastructures across development, staging, and production environments using Terraform. This reflects my approach: building practical, hands-on solutions that bridge learning and real-world application.
+
+I’m open to remote opportunities and enjoy collaborating on projects that value automation, efficiency, and practical problem-solving.</p>
 </section>
 
 <!-- Skills and Education -->
