--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Haneef Olajobi – Cloud Engineer | Portfolio</title>
+<title>Haneef Olajobi</title>
 <meta name="description" content="Haneef Olajobi is a Cloud Engineer with skills in AWS, DevOps, QA Testing, Linux, and Web Development. Explore projects, articles, and cloud journey.">
 <meta name="keywords" content="Haneef, Olajobi, Haneef Olajobi, Cloud Engineer, Cloud Engineer, AWS, DevOps, Nigeria Cloud Engineer, Cloud Portfolio, Cloud Projects">
 <meta name="author" content="Haneef Olajobi">
+
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -448,15 +454,25 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
 
 <!-- About -->
 <section id="about" class="card">
-  <h3>About me</h3>
-  <p style="color:var(--muted)">I’m Olajobi Haneef, a Cloud Engineer from Nigeria with a passion for building scalable, automated, and cost-efficient cloud solutions. My expertise spans AWS, Python, Terraform, and AI, combined with strong skills in problem-solving, creative design, leadership, and communication.
-
-I have 3 years of experience as a freelance frontend developer, and during my 2025 internship, I served as a Technical Lead, guiding projects and mentoring teammates. These experiences gave me a solid foundation in both development and leadership, which I now bring to the cloud space.
-
-Currently, I’m working on Multi-Environment-Enterprise-Infrastructure, a project that focuses on designing and deploying fully automated infrastructures across development, staging, and production environments using Terraform. This reflects my approach: building practical, hands-on solutions that bridge learning and real-world application.
-
-I’m open to remote opportunities and enjoy collaborating on projects that value automation, efficiency, and practical problem-solving.</p>
+  <h3>About Me</h3>
+  
+  <p style="color: var(--muted); margin-bottom: 1rem;">
+    I’m <strong>Olajobi Haneef</strong>, a Cloud Engineer from Nigeria with a passion for building scalable, automated, and cost-efficient cloud solutions. My expertise spans <strong>AWS, Python, Terraform, and AI</strong>, combined with strong skills in problem-solving, creative design, leadership, and communication.
+  </p>
+  
+  <p style="color: var(--muted); margin-bottom: 1rem;">
+    I have <strong>3 years of experience as a freelance frontend developer</strong>, and during my 2025 internship, I served as a <strong>Technical Lead</strong>, guiding projects and mentoring teammates. These experiences gave me a solid foundation in both development and leadership, which I now bring to the cloud space.
+  </p>
+  
+  <p style="color: var(--muted); margin-bottom: 1rem;">
+    Currently, I’m working on <strong>Multi-Environment-Enterprise-Infrastructure</strong>, a project that focuses on designing and deploying fully automated infrastructures across development, staging, and production environments using Terraform. This reflects my approach: building practical, hands-on solutions that bridge learning and real-world application.
+  </p>
+  
+  <p style="color: var(--muted); margin-bottom: 1rem;">
+    I’m open to <strong>remote opportunities</strong> and enjoy collaborating on projects that value automation, efficiency, and practical problem-solving.
+  </p>
 </section>
+
 
 <!-- Skills and Education -->
 <section class="grid" style="margin-top:18px">
