--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Haneef Olajobi</title>
-<meta name="description" content="Haneef Olajobi is a Cloud Engineer with skills in AWS, DevOps, QA Testing, Linux, and Web Development. Explore projects, articles, and cloud journey.">
-<meta name="keywords" content="Haneef, Olajobi, Haneef Olajobi, Cloud Engineer, Cloud Engineer, AWS, DevOps, Nigeria Cloud Engineer, Cloud Portfolio, Cloud Projects">
-<meta name="author" content="Haneef Olajobi">
-
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-
+  
+<meta name="description" content="Haneef Olajobi is a Cloud Engineer with skills in AWS, DevOps, QA Testing, Linux, and Web Development. Explore projects, articles, and cloud journey.">
+<meta name="keywords" content="Haneef, Olajobi, Haneef Olajobi, Cloud Engineer, Cloud Engineer, AWS, DevOps, Nigeria Cloud Engineer, Cloud Portfolio, Cloud Projects">
+<meta name="author" content="Haneef Olajobi">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -428,7 +427,7 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
 <section class="hero">
   <div class="intro">
     <h1>Hi, I'm <span style="font-size:44px">Haneef Olajobi</span></h1>
-    <p class="type"><span id="typed">Aspiring Cloud Engineer</span></p>
+    <p class="type"><span id="typed">Cloud Engineer</span></p>
     <p>I am a cloud engineer with experience in QA testing and software development.</p>
     <div class="hero-buttons">
       <a href="#work" style="background:var(--accent);color:#fff;">
