--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Haneef Olajobi</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-  
+
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest">
+
 <meta name="description" content="Haneef Olajobi is a Cloud Engineer with skills in AWS, DevOps, QA Testing, Linux, and Web Development. Explore projects, articles, and cloud journey.">
 <meta name="keywords" content="Haneef, Olajobi, Haneef Olajobi, Cloud Engineer, Cloud Engineer, AWS, DevOps, Nigeria Cloud Engineer, Cloud Portfolio, Cloud Projects">
 <meta name="author" content="Haneef Olajobi">
