--- a/index.html
+++ b/index.html
@@ -97,6 +97,29 @@ section.card:hover{box-shadow:0 6px 25px rgba(0,0,0,0.12);}
 ul{margin:0;padding-left:18px}
 li{margin-bottom:6px}
 
+/* Project Highlights Update */
+.skill-tag {
+    display: inline-block;
+    border: 1.5px solid var(--accent);
+    color: var(--accent);
+    padding: 2px 8px;
+    border-radius: 6px;
+    font-size: 13px;
+    font-weight: 600;
+    margin-top: 4px;
+}
+.github-link {
+    display: inline-flex;
+    align-items: center;
+    gap: 6px;
+    margin-top: 12px;
+    color: var(--accent);
+    font-weight: 600;
+    font-size: 14px;
+    transition: 0.2s;
+}
+.github-link:hover { opacity: 0.8; text-decoration: underline; }
+
 /* Footer */
 footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e5e5e5;text-align:center; font-size:14px;}
 
@@ -245,7 +268,7 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
 
 .projects-grid {
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
   gap:16px;
   margin-top:14px;
 }
@@ -253,149 +276,17 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
 /* Mobile Responsiveness */
 @media(max-width:768px){
   .container { padding: 16px; }
-  
-  /* Header Navigation */
   .nav { padding: 10px 0; }
   .logo { width: 42px; height: 42px; font-size: 18px; }
-  .brand > div > div:first-child { font-size: 16px; }
-  .brand > div > div:last-child { font-size: 11px; }
-  
-  nav ul { gap: 12px; }
-  nav a { font-size: 14px; }
-  
-  /* Hero Section - Stack vertically */
-  .hero {
-    grid-template-columns: 1fr;
-    padding: 24px 0;
-    gap: 20px;
-  }
-  
+  .hero { grid-template-columns: 1fr; padding: 24px 0; gap: 20px; }
   .intro h1 { font-size: 28px; }
-  .intro h1 span { font-size: 32px !important; }
-  .intro p { font-size: 14px; }
-  
-  .hero-buttons {
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .hero-buttons a {
-    width: 100%;
-    padding: 12px 14px;
-  }
-  
-  /* Profile Card */
-  .profile { 
-    order: -1; /* Show profile picture first on mobile */
-    padding: 14px;
-  }
+  .hero-buttons { flex-direction: column; gap: 10px; }
+  .hero-buttons a { width: 100%; padding: 12px 14px; }
+  .profile { order: -1; padding: 14px; }
   .avatar { height: 250px; }
-  
-  /* Grid - Single column on mobile */
-  .grid {
-    grid-template-columns: 1fr;
-    gap: 14px;
-  }
-  
-  /* Cards */
-  section.card { padding: 14px; }
-  .card h3 { font-size: 20px; }
-  .card h4 { font-size: 16px; }
-  
-  /* Projects Grid */
-  .projects-grid {
-    grid-template-columns: 1fr;
-    gap: 12px;
-  }
-  
-  /* Game Area */
-  .play { 
-    height: 340px;
-    max-width: 100%;
-  }
-  
-  .level-label {
-    font-size: 14px;
-    padding: 4px 8px;
-  }
-  
-  .win {
-    padding: 12px 18px;
-    font-size: 16px;
-    max-width: 90%;
-  }
-  
-  /* D-pad controls */
-  .dpad { 
-    grid-template-columns: 56px 56px 56px; 
-    gap: 10px; 
-  }
-  .dpad .btn { 
-    width: 56px; 
-    height: 56px; 
-    font-size: 18px; 
-  }
-  .btn.center { 
-    width: 48px; 
-    height: 48px; 
-    font-size: 12px; 
-  }
-  
-  .game-hint {
-    font-size: 12px;
-    padding: 0 10px;
-  }
-  
-  /* Contact Icons */
-  .icon-links {
-    justify-content: center !important;
-  }
-  
-  /* Footer */
-  footer {
-    margin-top: 24px;
-    padding: 20px 0;
-    font-size: 12px;
-  }
-}
-
-@media(max-width:480px){
-  .container { padding: 12px; }
-  
-  .intro h1 { font-size: 24px; }
-  .intro h1 span { font-size: 28px !important; }
-  
-  nav ul { gap: 8px; }
-  nav a { font-size: 13px; }
-  
-  .avatar { height: 200px; }
-  
-  .play { height: 300px; }
-  
-  .dpad { 
-    grid-template-columns: 48px 48px 48px; 
-    gap: 8px; 
-  }
-  .dpad .btn { 
-    width: 48px; 
-    height: 48px; 
-    font-size: 16px; 
-  }
-  .btn.center { 
-    width: 40px; 
-    height: 40px; 
-    font-size: 11px; 
-  }
-  
-  .caterpillar-head, .segment {
-    width: 32px;
-    height: 32px;
-  }
-  
-  .leaf {
-    width: 24px;
-    height: 24px;
-  }
+  .grid { grid-template-columns: 1fr; gap: 14px; }
+  .projects-grid { grid-template-columns: 1fr; gap: 12px; }
+  .play { height: 340px; max-width: 100%; }
 }
 </style>
 </head>
@@ -424,19 +315,14 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
 
 <main class="container">
 
-<!-- Hero -->
 <section class="hero">
   <div class="intro">
     <h1>Hi, I'm <span style="font-size:44px">Haneef Olajobi</span></h1>
     <p class="type"><span id="typed">Cloud Engineer</span></p>
     <p>I am a cloud engineer with experience in QA testing and software development.</p>
     <div class="hero-buttons">
-      <a href="#work" style="background:var(--accent);color:#fff;">
-        See my work
-      </a>
-      <a href="Haneef_Olajobi_Resume.pdf" download style="background:#555;color:#fff;">
-        Resume
-      </a>
+      <a href="#work" style="background:var(--accent);color:#fff;">See my work</a>
+      <a href="Haneef_Olajobi_Resume.pdf" download style="background:#555;color:#fff;">Resume</a>
     </div>
   </div>
 
@@ -452,29 +338,20 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
   </aside>
 </section>
 
-<!-- About -->
 <section id="about" class="card">
   <h3>About Me</h3>
-  
   <p style="color: var(--muted); margin-bottom: 1rem;">
     I’m <strong>Olajobi Haneef</strong>, a Cloud Engineer from Nigeria with a passion for building scalable, automated, and cost-efficient cloud solutions. My expertise spans <strong>AWS, Python, Terraform, and AI</strong>, combined with strong skills in problem-solving, creative design, leadership, and communication.
   </p>
-  
   <p style="color: var(--muted); margin-bottom: 1rem;">
     I have <strong>3 years of experience as a freelance frontend developer</strong>, and during my 2025 internship, I served as a <strong>Technical Lead</strong>, guiding projects and mentoring teammates. These experiences gave me a solid foundation in both development and leadership, which I now bring to the cloud space.
   </p>
-  
   <p style="color: var(--muted); margin-bottom: 1rem;">
-    Currently, I’m working on <strong>Multi-Environment-Enterprise-Infrastructure</strong>, a project that focuses on designing and deploying fully automated infrastructures across development, staging, and production environments using Terraform. This reflects my approach: building practical, hands-on solutions that bridge learning and real-world application.
-  </p>
-  
-  <p style="color: var(--muted); margin-bottom: 1rem;">
-    I’m open to <strong>remote opportunities</strong> and enjoy collaborating on projects that value automation, efficiency, and practical problem-solving.
+    Currently, I’m working on <strong>Multi-Environment-Enterprise-Infrastructure</strong>, a project that focuses on designing and deploying fully automated infrastructures across development, staging, and production environments using Terraform.
   </p>
 </section>
 
 
-<!-- Skills and Education -->
 <section class="grid" style="margin-top:18px">
   <div class="card">
     <h4>Technical skills</h4>
@@ -506,39 +383,61 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
   </div>
 </section>
 
-<!-- Projects / Work -->
 <section id="work" class="card" style="margin-top:18px">
   <h3>Projects / Work</h3>
   <div class="projects-grid">
     <div class="card">
       <h4>Automatic Backup System</h4>
-      <strong>Tools/Services:</strong> Python, AWS S3, Cron Jobs<br>
-      <p style="color:var(--muted)">Automates daily data backups to Amazon S3 with logging for easy monitoring.</p>
+      <div class="skill-tag">Python, AWS S3, Cron Jobs</div>
+      <p style="color:var(--muted); margin-top:8px;">Automates daily data backups to Amazon S3 with logging for easy monitoring.</p>
+      <a href="https://github.com/haneeo3/your-repo-name" target="_blank" class="github-link">
+        <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.9-1.5-3.9-1.5-.5-1.3-1.2-1.7-1.2-1.7-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.6 2.1-1 -2.5-.3-5.2-1.3-5.2-5.9 0-1.3.5-2.4 1.2-3.3 -.1-.3-.5-1.6.1-3.3 0 0 1-.3 3.3 1.2a11.4 11.4 0 0 1 6 0C17 5.3 18 5.6 18 5.6c.6 1.7.2 3 .1 3.3.8.9 1.2 2 1.2 3.3 0 4.6-2.7 5.6-5.2 5.9.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A10.97 10.97 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/></svg>
+        View on GitHub
+      </a>
     </div>
+
     <div class="card">
       <h4>Cloud Cost Calculator</h4>
-      <strong>Tools/Services:</strong> Python, AWS Boto3, Lambda, SNS<br>
-      <p style="color:var(--muted)">Monitors AWS spending and sends notifications when usage exceeds thresholds.</p>
+      <div class="skill-tag">Python, AWS Boto3, Lambda, SNS</div>
+      <p style="color:var(--muted); margin-top:8px;">Monitors AWS spending and sends notifications when usage exceeds thresholds.</p>
+      <a href="https://github.com/haneeo3/your-repo-name" target="_blank" class="github-link">
+        <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.9-1.5-3.9-1.5-.5-1.3-1.2-1.7-1.2-1.7-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.6 2.1-1 -2.5-.3-5.2-1.3-5.2-5.9 0-1.3.5-2.4 1.2-3.3 -.1-.3-.5-1.6.1-3.3 0 0 1-.3 3.3 1.2a11.4 11.4 0 0 1 6 0C17 5.3 18 5.6 18 5.6c.6 1.7.2 3 .1 3.3.8.9 1.2 2 1.2 3.3 0 4.6-2.7 5.6-5.2 5.9.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A10.97 10.97 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/></svg>
+        View on GitHub
+      </a>
     </div>
+
     <div class="card">
       <h4>AWS Static Website</h4>
-      <strong>Tools/Services:</strong> AWS S3, CloudFront, HTML/CSS<br>
-      <p style="color:var(--muted)">Responsive portfolio hosted on S3 with global CDN delivery via CloudFront.</p>
+      <div class="skill-tag">S3, CloudFront, HTML/CSS</div>
+      <p style="color:var(--muted); margin-top:8px;">Responsive portfolio hosted on S3 with global CDN delivery via CloudFront.</p>
+      <a href="https://github.com/haneeo3/your-repo-name" target="_blank" class="github-link">
+        <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.9-1.5-3.9-1.5-.5-1.3-1.2-1.7-1.2-1.7-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.6 2.1-1 -2.5-.3-5.2-1.3-5.2-5.9 0-1.3.5-2.4 1.2-3.3 -.1-.3-.5-1.6.1-3.3 0 0 1-.3 3.3 1.2a11.4 11.4 0 0 1 6 0C17 5.3 18 5.6 18 5.6c.6 1.7.2 3 .1 3.3.8.9 1.2 2 1.2 3.3 0 4.6-2.7 5.6-5.2 5.9.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A10.97 10.97 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/></svg>
+        View on GitHub
+      </a>
     </div>
+
     <div class="card">
       <h4>Website Uptime Monitor</h4>
-      <strong>Tools/Services:</strong> Python, AWS Lambda, SNS, CloudWatch<br>
-      <p style="color:var(--muted)">Monitors website uptime and sends real-time alerts when downtime occurs.</p>
+      <div class="skill-tag">Python, Lambda, SNS, CloudWatch</div>
+      <p style="color:var(--muted); margin-top:8px;">Monitors website uptime and sends real-time alerts when downtime occurs.</p>
+      <a href="https://github.com/haneeo3/your-repo-name" target="_blank" class="github-link">
+        <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.9-1.5-3.9-1.5-.5-1.3-1.2-1.7-1.2-1.7-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.6 2.1-1 -2.5-.3-5.2-1.3-5.2-5.9 0-1.3.5-2.4 1.2-3.3 -.1-.3-.5-1.6.1-3.3 0 0 1-.3 3.3 1.2a11.4 11.4 0 0 1 6 0C17 5.3 18 5.6 18 5.6c.6 1.7.2 3 .1 3.3.8.9 1.2 2 1.2 3.3 0 4.6-2.7 5.6-5.2 5.9.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A10.97 10.97 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/></svg>
+        View on GitHub
+      </a>
     </div>
+
     <div class="card">
-      <h4>Customer Inquiry Manager</h4>
-      <strong>Tools/Services:</strong> Python, OpenAI API, Flask, AWS S3<br>
-      <p style="color:var(--muted)">Automates AI-powered responses to customer inquiries and stores logs in S3.</p>
+      <h4>AI Inquiry Manager</h4>
+      <div class="skill-tag">Python, OpenAI, Flask, AWS S3</div>
+      <p style="color:var(--muted); margin-top:8px;">Automates AI-powered responses to customer inquiries and stores logs in S3.</p>
+      <a href="https://github.com/haneeo3/your-repo-name" target="_blank" class="github-link">
+        <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.9-1.5-3.9-1.5-.5-1.3-1.2-1.7-1.2-1.7-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.6 2.1-1 -2.5-.3-5.2-1.3-5.2-5.9 0-1.3.5-2.4 1.2-3.3 -.1-.3-.5-1.6.1-3.3 0 0 1-.3 3.3 1.2a11.4 11.4 0 0 1 6 0C17 5.3 18 5.6 18 5.6c.6 1.7.2 3 .1 3.3.8.9 1.2 2 1.2 3.3 0 4.6-2.7 5.6-5.2 5.9.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A10.97 10.97 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/></svg>
+        View on GitHub
+      </a>
     </div>
   </div>
 </section>
 
-<!-- Games -->
 <section id="games" class="card" style="margin-top:18px">
   <h3>Games / Fun Projects</h3>
   <p style="color:var(--muted)">Play my Caterpillar Game directly here!</p>
@@ -558,17 +457,15 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
       <div class="btn down" data-dir="down">▼</div>
     </div>
   </div>
-  <div class="game-hint">Tap the buttons (mobile) or click the game then press WASD (desktop). Click outside to unfocus.</div>
+  <div class="game-hint">Tap the buttons (mobile) or click the game then press WASD (desktop).</div>
 </section>
 
-<!-- Contact -->
 <section id="contact" class="card" style="margin-top:18px">
   <h3>Contact</h3>
-  <p style="color:var(--muted);text-align:center;">Feel free to reach out via email or connect on LinkedIn / GitHub!</p>
   <div class="icon-links" style="display:flex;gap:20px;justify-content:center;align-items:center;margin-top:10px;">
-    <a href="mailto:olajobihaneef@gmail.com" title="Email Haneef"><svg width="30" height="30" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"/></svg></a>
-    <a href="https://www.linkedin.com/in/haneef-olajobi" target="_blank" title="LinkedIn Profile"><svg width="30" height="30" viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V23h-4V8zm7.5 0h3.8v2.1h.1c.5-1 1.8-2.1 3.7-2.1 3.9 0 4.6 2.6 4.6 6V23h-4v-7.9c0-1.9 0-4.3-2.6-4.3-2.6 0-3 2-3 4.1V23h-4V8z"/></svg></a>
-    <a href="https://github.com/haneeo3" target="_blank" title="GitHub Profile"><svg width="30" height="30" viewBox="0 0 24 24"><path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.9-1.5-3.9-1.5-.5-1.3-1.2-1.7-1.2-1.7-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.6 2.1-1 -2.5-.3-5.2-1.3-5.2-5.9 0-1.3.5-2.4 1.2-3.3 -.1-.3-.5-1.6.1-3.3 0 0 1-.3 3.3 1.2a11.4 11.4 0 0 1 6 0C17 5.3 18 5.6 18 5.6c.6 1.7.2 3 .1 3.3.8.9 1.2 2 1.2 3.3 0 4.6-2.7 5.6-5.2 5.9.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A10.97 10.97 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/></svg></a>
+    <a href="mailto:olajobihaneef@gmail.com"><svg width="30" height="30" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"/></svg></a>
+    <a href="https://www.linkedin.com/in/haneef-olajobi" target="_blank"><svg width="30" height="30" viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V23h-4V8zm7.5 0h3.8v2.1h.1c.5-1 1.8-2.1 3.7-2.1 3.9 0 4.6 2.6 4.6 6V23h-4v-7.9c0-1.9 0-4.3-2.6-4.3-2.6 0-3 2-3 4.1V23h-4V8z"/></svg></a>
+    <a href="https://github.com/haneeo3" target="_blank"><svg width="30" height="30" viewBox="0 0 24 24"><path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.9-1.5-3.9-1.5-.5-1.3-1.2-1.7-1.2-1.7-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.6 2.1-1 -2.5-.3-5.2-1.3-5.2-5.9 0-1.3.5-2.4 1.2-3.3 -.1-.3-.5-1.6.1-3.3 0 0 1-.3 3.3 1.2a11.4 11.4 0 0 1 6 0C17 5.3 18 5.6 18 5.6c.6 1.7.2 3 .1 3.3.8.9 1.2 2 1.2 3.3 0 4.6-2.7 5.6-5.2 5.9.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A10.97 10.97 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/></svg></a>
   </div>
 </section>
 
