--- a/index.html
+++ b/index.html
@@ -570,5 +570,10 @@ dpad.addEventListener('touchstart',(e)=>{e.preventDefault();},{passive:false});
 startLevel();
 update();
 </script>
+  <script src="https://platform.linkedin.com/badges/js/profile.js"
+        async
+        defer
+        type="text/javascript">
+</script>
 </body>
 </html>
