--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e
     <p>I am a cloud engineer with experience in QA testing and software development.</p>
     <div class="hero-buttons">
       <a href="#work" style="background:var(--accent);color:#fff;">See my work</a>
-      <a href="Haneef_Olajobi_Resume.pdf" download style="background:#555;color:#fff;">Resume</a>
+      <a href="Olajobi Haneef.pdf" download style="background:#555;color:#fff;">Resume</a>
     </div>
   </div>
 
